force-app/main/default/objects/Membership_Numbers__c/Membership_Numbers__c.object-meta.xml
<CustomObject>
    <label>Membership Numbers</label>
    <nameField>
        <displayFormat>MNN-{00000}</displayFormat>
        <label>Membership Numbers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>