force-app/main/default/objects/Membership_Numbers__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <description>This field determine which financial year record sit in.</description>
    <label>Financial Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2022-2023</fullName>
                <default>true</default>
                <label>2022-2023</label>
            </value>
            <value>
                <fullName>2021-2022</fullName>
            </value>
            <value>
                <fullName>2020-2021</fullName>
            </value>
            <value>
                <fullName>2019-2020</fullName>
            </value>
            <value>
                <fullName>2018-2019</fullName>
            </value>
            <value>
                <fullName>2017-2018</fullName>
            </value>
            <value>
                <fullName>2016-2017</fullName>
            </value>
            <value>
                <fullName>2015-2016</fullName>
            </value>
            <value>
                <fullName>2014-2015</fullName>
            </value>
            <value>
                <fullName>2013-2014</fullName>
            </value>
            <value>
                <fullName>2012-2013</fullName>
            </value>
            <value>
                <fullName>2011-2012</fullName>
            </value>
            <value>
                <fullName>2010-2011</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>