force-app/main/default/objects/Membership_Numbers__c/fields/Gender_Diverse_Members__c.field-meta.xml
<CustomField>
    <fullName>Gender_Diverse_Members__c</fullName>
    <label>Gender Diverse Members</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>