force-app/main/default/objects/Membership_Numbers__c/fields/Gender_not_captured__c.field-meta.xml
<CustomField>
    <fullName>Gender_not_captured__c</fullName>
    <description>Members where gender has not been captured.</description>
    <inlineHelpText>Include members where gender has not been captured</inlineHelpText>
    <label>Gender not captured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>