force-app/main/default/objects/Membership_Numbers__c/fields/Male_Members__c.field-meta.xml
<CustomField>
    <fullName>Male_Members__c</fullName>
    <label>Male Members</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>