force-app/main/default/objects/Membership_Numbers__c/fields/Membership_Numbers_Category__c.field-meta.xml
<CustomField>
    <fullName>Membership_Numbers_Category__c</fullName>
    <label>Membership Numbers Category</label>
    <referenceTo>Membership_Numbers_Category__c</referenceTo>
    <relationshipLabel>Membership Numbers</relationshipLabel>
    <relationshipName>Membership_Numbers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>