force-app/main/default/objects/Membership_Numbers__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Membership Numbers</relationshipLabel>
    <relationshipName>Membership_Numbers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>