force-app/main/default/objects/Membership_Numbers__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+Programme__r.Organisation__c,Programme__r.Organisation__r.Name)</formula>
    <label>Organization1</label>
    <type>Text</type>
</CustomField>