force-app/main/default/objects/Membership_Numbers__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme</label>
    <referenceTo>Programme_and_Event_Data__c</referenceTo>
    <relationshipLabel>Membership Numbers</relationshipLabel>
    <relationshipName>Membership_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>