force-app/main/default/objects/Membership_Numbers__c/fields/Workforce_Category__c.field-meta.xml
<CustomField>
    <fullName>Workforce_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Workforce Category</label>
    <referenceTo>Workforce_Numbers_Category__c</referenceTo>
    <relationshipLabel>Membership Numbers</relationshipLabel>
    <relationshipName>Membership_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>