force-app/main/default/objects/Membership_Numbers__c/validationRules/Program_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Update</fullName>
    <active>false</active>
    <description>Partner Users are not permitted to update the Programme</description>
    <errorConditionFormula>IF(AND(CONTAINS($Profile.Name,&apos;Partner&apos;),ISNEW(),ISCHANGED( Programme__c)),true,false)</errorConditionFormula>
    <errorDisplayField>Programme__c</errorDisplayField>
    <errorMessage>Partner Users are not permitted to update the Programme</errorMessage>
</ValidationRule>